Updated Netmatters Webpage

--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                     <div class="popup">
                         <h4>Girl Guiding Anglia</h4>
                         <p>Girl Guiding Anglia is part of Girlguiding, the UK's leading charity for girls and young woman in the UK.</p>
-                        <a href="#" class="logo-btn welcome-to-btn-3">View Our Case Study<i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="#" class="logo-btn logo-btn-it">View Our Case Study<i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div class="logo-triangle guides-triangle"></div>
                 </div>
@@ -714,7 +714,7 @@
                     <div class="popup">
                         <h4>Sweetzy</h4>
                         <p>Sweetzy are an online sweets retailer, based in Wymondham.</p>
-                        <a href="#" class="logo-btn welcome-to-btn-3">View Our Case Study<i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="#" class="logo-btn logo-btn-digital">View Our Case Study<i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div class="logo-triangle sweetzy-triangle"></div>
                 </div>
@@ -738,7 +738,7 @@
                     <div class="popup">
                         <h4>GDST</h4>
                         <p>The <strong>Girls' Day School Trust (GDST)</strong> is the UK's leading family of 25 independent girls' schools.</p>
-                        <a href="#" class="logo-btn welcome-to-btn-3">View Our Case Study<i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="#" class="logo-btn logo-btn-digital">View Our Case Study<i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div class="logo-triangle girls-triangle"></div>
                 </div>
@@ -751,7 +751,7 @@
                     <div class="popup">
                         <h4>Ashcroft Partnership LLP</h4>
                         <p>Originall founded in 2006 as Ashcroft Anthony, they became Ashcroft Partnership LLP in 2020 and are one of the top chartered accountancy firms in Cambridge, advising entrepreneurs and families.</p>
-                        <a href="#" class="logo-btn welcome-to-btn-3">View Our Case Study<i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="#" class="logo-btn logo-btn-web">View Our Case Study<i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div class="logo-triangle ashcroft-triangle"></div>
                 </div>
@@ -764,7 +764,7 @@
                     <div class="popup">
                         <h4>One Traveller</h4>
                         <p><strong>One Traveller</strong>, founded in 2007, is a leading provider of solo holidays for over 50s.</p>
-                        <a href="#" class="logo-btn welcome-to-btn-3">View Our Case Study<i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="#" class="logo-btn logo-btn-web">View Our Case Study<i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div class="logo-triangle one-triangle"></div>
                 </div>
@@ -777,7 +777,7 @@
                     <div class="popup">
                         <h4>Searles Leisure Resort</h4>
                         <p>Searles Leisure Resort, on the beautiful North Norfolk coast, is an award-winning UK holiday resort for families.</p>
-                        <a href="#" class="logo-btn welcome-to-btn-3">View Our Case Study<i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="#" class="logo-btn logo-btn-digital">View Our Case Study<i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div class="logo-triangle searles-triangle"></div>
                 </div>
