Updated Netmatters Webpage with working JS

--- a/index.html
+++ b/index.html
@@ -851,7 +851,6 @@
                         <div class="welcome-to-column">
                             <div class="welcome-to-col-1">
                             <h2 ><strong class="strong-title">Welcome To Netmatters</strong></h2>
-
                             <p>
                                 <strong class="strong-paragraph">
                                     Netmatters is a leading 
@@ -1322,6 +1321,6 @@
                 </div>   
             </div>
         </div>              
-    <script type="module" src="js/main.js"></script> 
+    <script type="module" src="JS/main.js"></script>
     </body>
 </html>
