Updated Netmatters Webpage
Added the carousel, fixed the issue with the button/logo spacing, and tinkered around with beginning to set up the cookie pop up.

--- a/index.html
+++ b/index.html
@@ -682,14 +682,91 @@
             </div>
             <div class="banner">
                 <div class="banner-container">
-                    <img class="img-logo-top" src="images/home-MSxH.png" alt="Image of a padlock sitting inside a circle, connected by straight lines that change direction in sharp 90 degree angles, connecting to other images sitting within circles.">
-                    <div class="container">
-                        <div class="banner-text">
-                            <h1>Cyber Security</h1>
-                            <p>Keeping businesses and their customers
-                            <br>
-                            sensitive information protected.</p>
-                            <a href="#" class="banner-btn">Find Out More<i class="fa-solid fa-arrow-right"></i></a>
+                    <div class="carousel">
+                        <div class="slide">
+                            <img class="img-logo-top" src="images/home-YLei.png" alt="Image of a one of the Netmatters locations. A large white wearhouse building, with green stripes around a grid of windows and the surrounding structure">
+                            <div class="container">
+                                <div class="banner-text">
+                                    <h1>The East Of England's Leading 
+                                        <br> Technology Company</h1>
+                                    <p>Performance-driven digital and technology services
+                                    <br>
+                                    with complete transparency.</p>
+                                    <a href="#" class="banner-btn banner-web-btn">Find Out More<i class="fa-solid fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <img class="img-logo-top" src="images/home-O67Y.png" alt="Image of a man sitting at a desk with a laptop in front oh him, smiling, while also wearing headphones with a microphone.">
+                            <div class="container">
+                                <div class="banner-text">
+                                    <h1>Bespoke Software</h1>
+                                    <p>Delivering expert bespoke software
+                                    <br>
+                                    solutions across a range of industries.</p>
+                                    <a href="#" class="banner-btn banner-software-btn">Find Out More<i class="fa-solid fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <img class="img-logo-top" src="images/home-guy8.png" alt="Image of a man who is lent over working on the inside of a computer that's sat on top of a desk, that they have opened up to work on.">
+                            <div class="container">
+                                <div class="banner-text">
+                                    <h1>IT Support</h1>
+                                    <p>Fast and cost-effective IT support
+                                    <br>
+                                    services for your business.</p>
+                                    <a href="#" class="banner-btn banner-it-btn">Find Out More<i class="fa-solid fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <img class="img-logo-top" src="images/home-6yTp.png" alt="Image of woamn sitting down at her desk, with her id card hanging from her neck, while typing on her computer to complete some work.">
+                            <div class="container">
+                                <div class="banner-text">
+                                    <h1>Digital Marketing</h1>
+                                    <p>Generating your new business through
+                                    <br>
+                                    results-driven marketing activities.</p>
+                                    <a href="#" class="banner-btn banner-digital-btn">Find Out More<i class="fa-solid fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <img class="img-logo-top" src="images/home-J8Xx.png" alt="Image of a office phone which has no screen. Just a phone docked into it's cradle, with the cradle having all the buttons to operate the phone.">
+                            <div class="container">
+                                <div class="banner-text">
+                                    <h1>Telecoms Services</h1>
+                                    <p>A new approach to connectivity, see
+                                    <br>
+                                    how we can help your business.</p>
+                                    <a href="#" class="banner-btn banner-training-btn">Find Out More<i class="fa-solid fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <img class="img-logo-top" src="images/home-K0pn.png" alt="Image of a man wearing glasses, looking to his left, with his laptop in front of him, looking like he is having a conversation with someone else off screen.">
+                            <div class="container">
+                                <div class="banner-text">
+                                    <h1>Web Design</h1>
+                                    <p>For businesses looking to make a strong
+                                    <br>
+                                    and effective first impression.</p>
+                                    <a href="#" class="banner-btn banner-web-btn">Find Out More<i class="fa-solid fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <img class="img-logo-top" src="images/home-MSxH.png" alt="Image of a padlock sitting inside a circle, connected by straight lines that change direction in sharp 90 degree angles, connecting to other images sitting within circles.">
+                            <div class="container">
+                                <div class="banner-text">
+                                    <h1>Cyber Security</h1>
+                                    <p>Keeping businesses and their customers
+                                    <br>
+                                    sensitive information protected.</p>
+                                    <a href="#" class="banner-btn banner-security-btn">Find Out More<i class="fa-solid fa-arrow-right"></i></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>  
