--- a/index.html
+++ b/index.html
@@ -686,13 +686,13 @@
                         <div class="slide">
                             <img class="img-logo-top" src="images/home-YLei.png" alt="Image of a one of the Netmatters locations. A large white wearhouse building, with green stripes around a grid of windows and the surrounding structure">
                             <div class="container">
-                                <div class="banner-text">
+                                <div class="banner-text banner-text-first">
                                     <h1>The East Of England's Leading 
                                         <br> Technology Company</h1>
                                     <p>Performance-driven digital and technology services
                                     <br>
                                     with complete transparency.</p>
-                                    <a href="#" class="banner-btn banner-web-btn">Find Out More<i class="fa-solid fa-arrow-right"></i></a>
+                                    <a href="#" class="banner-btn banner-web-btn banner-btn-first">Find Out More<i class="fa-solid fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
