--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@
     </head>
 
     <body>
+        <div id="cookie-overlay">
+            <div class="cookie-app">
+                <div class="cookie-content">
+                    <div class="cookie-header">
+                        <h3 class="cookie-title">Cookies Policy</h3>
+                    </div>
+                    <div class="cookie-body">
+                        <p>
+                            Our website uses cookies. This helps us provide you with a good experience on our website. To see what cookies we use and what they do, and to opt-in on non-essential cookies click "change settings". For a detailed explanation, click on 
+                            "<a href="#">Privacy Policy</a>"
+                            otherwise click "Accept Cookies" to enter.
+                        </p>
+                    </div>
+                    <div class="cookie-footer">
+                        <div class="cookie-btn-box cookie-btn-box-change-settings">
+                            <a href="#" class="cookie-btn change-settings">Change Settings</a>
+                        </div>
+                        <div class="cookie-btn-box cookie-btn-box-accept-cookies">
+                            <a href="#" class="cookie-btn accept-cookies" id="accept-cookies-id">Accept Cookies</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="sidebar">
             <div class="sidebar-small">
                 <ul>
