Cookie popup completed
The cookie popup is functional and styled correctly.

--- a/index.html
+++ b/index.html
@@ -473,23 +473,23 @@
                                             <div class="dd-title">Our Consultancy &amp; Development Services</div>
                                             <div class="dd-row">
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Bespoke CRM</a></li>
-                                                    <li><a href="#">Mobile APP Development</a></li>
-                                                    <li><a href="#">Operational Systems</a></li>
-                                                    <li><a href="#">Intranet Development</a></li>
-                                                    <li><a href="#">SAP S/4HANA Management</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-gears"></i><span>Bespoke CRM</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-mobile-screen-button"></i><span>Mobile APP Development</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-download"></i><span>Operational Systems</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-cloud"></i><span>Intranet Development</span></a></li>
+                                                    <li><a href="#"><i class="fa-regular fa-handshake"></i><span>SAP S/4HANA Management</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Business Automation</a></li>
-                                                    <li><a href="#">Bespoke Databases</a></li>
-                                                    <li><a href="#">Business Central Implementation</a></li>
-                                                    <li><a href="#">Customer Portal Development</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-briefcase"></i><span>Business Automation</span></a></li>
+                                                    <li><a href="#"><i class="fa-regular fa-folder-open"></i><span>Bespoke Databases</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-users"></i><span>Business Central Implementation</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-cloud-arrow-down"></i><span>Customer Portal Development</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Software Integrations</a></li>
-                                                    <li><a href="#">Sharepoint Development</a></li>
-                                                    <li><a href="#">Internet of Things (IOT) Software</a></li>
-                                                    <li><a href="#">Reporting Hub</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-shuffle"></i><span>Software Integrations</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-arrow-right-arrow-left"></i><span>Sharepoint Development</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-laptop"></i><span>Internet of Things (IOT) Software</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-earth-europe"></i><span>Reporting Hub</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -515,16 +515,16 @@
                                             <div class="dd-title">Our IT Support Services</div>
                                             <div class="dd-row">
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Managed IT Support</a></li>
-                                                    <li><a href="#">IT Consultancy</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-headphones"></i><span>Managed IT Support</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-graduation-cap"></i><span>IT Consultancy</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Business IT Support</a></li>
-                                                    <li><a href="#">Cloud Service Provider</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-briefcase"></i><span>Business IT Support</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-cloud"></i><span>Cloud Service Provider</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Office 365 for Business</a></li>
-                                                    <li><a href="#">Data Backup &amp; Disaster Recovery</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-laptop"></i><span>Office 365 for Business</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-server"></i><span>Data Backup &amp; Disaster Recovery</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -550,16 +550,16 @@
                                             <div class="dd-title">Our Digital Marketing Services</div>
                                             <div class="dd-row">
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Search Engine Optimisation (SEO)</a></li>
-                                                    <li><a href="#">Email Marketing</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i><span>Search Engine Optimisation (SEO)</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-envelope"></i><span>Email Marketing</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Pay Per Click Advertising (PPC)</a></li>
-                                                    <li><a href="#">Social Media Marketing</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-money-bill-1"></i><span>Pay Per Click Advertising (PPC)</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-users"></i><span>Social Media Marketing</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Conversion Rate Optimisation (CRO)</a></li>
-                                                    <li><a href="#">Content Marketing</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-arrow-trend-up"></i><span>Conversion Rate Optimisation (CRO)</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-pencil"></i><span>Content Marketing</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -583,16 +583,16 @@
                                             <div class="dd-title">Our Telecoms Services</div>
                                             <div class="dd-row">
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Business Mobile</a></li>
-                                                    <li><a href="#">Business Connectivity</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-sim-card"></i><span>Business Mobile</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-gauge-high"></i><span>Business Connectivity</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Phone System Health Check</a></li>
-                                                    <li><a href="#">Telecoms Bill Review</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-phone"></i><span>Phone System Health Check</span></a></li>
+                                                    <li><a href="#"><i class="fa-regular fa-handshake"></i><span>Telecoms Bill Review</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Business Phone Systems</a></li>
-                                                    <li><a href="#">3CX Systems</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-square-phone"></i><span>Business Phone Systems</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-phone-volume"></i><span>3CX Systems</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -616,16 +616,16 @@
                                             <div class="dd-title">Our Web Design Services</div>
                                             <div class="dd-row">
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Bespoke Website Design</a></li>
-                                                    <li><a href="#">Branding & Design</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-pencil"></i><span>Bespoke Website Design</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-bullhorn"></i><span>Branding & Design</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">eCommerce Website Design</a></li>
-                                                    <li><a href="#">Mobile App Development</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i><span>eCommerce Website Design</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-mobile-screen-button"></i><span>Mobile App Development</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Pay Monthly Websites</a></li>
-                                                    <li><a href="#">Web Hosting</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-desktop"></i><span>Pay Monthly Websites</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-cloud"></i><span>Web Hosting</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -651,16 +651,16 @@
                                             <div class="dd-title">Our Cyber Secutiry Services</div>
                                             <div class="dd-row">
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Cyber Security Assessment</a></li>
-                                                    <li><a href="#">Cyber Essentials Certification</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-paste"></i><span>Cyber Security Assessment</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-graduation-cap"></i><span>Cyber Essentials Certification</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Cyber Security Management</a></li>
-                                                    <li><a href="#">PCI Compliance</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-clock"></i><span>Cyber Security Management</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-shield-halved"></i><span>PCI Compliance</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Cyber Penetration Testing</a></li>
-                                                    <li><a href="#">Hacking Prevention</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-flask"></i><span>Cyber Penetration Testing</span></a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-lock"></i><span>Hacking Prevention</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -686,14 +686,14 @@
                                             <div class="dd-title">Our Developer Course Services</div>
                                             <div class="dd-row">
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Train For A Career In Tech</a></li>
-                                                    <li><a href="#">Scion Collaborators</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-laptop"></i><span>Train For A Career In Tech</span></a></li>
+                                                    <li><a href="#"><i class="fa-regular fa-handshake"></i><span>Scion Collaborators</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Skills Bootcamp</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-code"></i><span>Skills Bootcamp</span></a></li>
                                                 </ul>
                                                 <ul class="dd-column">
-                                                    <li><a href="#">Scion Scheme Frequently Asked Questions</a></li>
+                                                    <li><a href="#"><i class="fa-solid fa-circle-question"></i><span>Scion Scheme Frequently Asked Questions</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
